# bio-workflow-eval

./: .gitignore  README.md  pyproject.toml
app/: streamlit_app.py
src/bio_workflow_eval/: __init__.py  api_clients.py  baselines.py  cli.py  failures.py  loader.py  metrics.py  runner.py  schemas.py
tasks/: benchmark.json
tests/: test_loader.py  test_metrics.py  test_runner.py
