[project]
name = "bio-workflow-eval"
version = "0.1.0"
description = "A small evaluation harness for biology/scientific workflow reasoning tasks"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "nihal-j" }
]
keywords = ["biology", "evaluation", "ai", "scientific-reasoning", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "pydantic>=2.0",
    "typer>=0.12",
    "rich>=13.0",
    "streamlit>=1.35",
    "httpx>=0.27",
    "pytest>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[project.scripts]
bio-eval = "bio_workflow_eval.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bio_workflow_eval"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
